# my_mpu9250_test

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  baro-estrai.sh  dynamic-model.sci  esempio.txt  fourier.sci  samples.sci  samples1.sci  sdkconfig
components/mpu9250/: CMakeLists.txt
components/mpu9250/include/: mpu9250.h  mpu9250_accel.h  mpu9250_baro.h  mpu9250_baro_calibrator.h  mpu9250_calibrator.h  mpu9250_gyro.h  mpu9250_mag.h  mpu9250_mag_calibrator.h  mpu9250_spi.h
components/mpu9250/src/: mpu9250.c  mpu9250_accel.c  mpu9250_baro.c  mpu9250_baro_calibrator.c  mpu9250_calibrator.c  mpu9250_gyro.c  mpu9250_mag.c  mpu9250_mag_calibrator.c  mpu9250_spi.c
main/: CMakeLists.txt  main.c  my_mpu9250_task.c  my_mpu9250_task.h
